# monaco-ops-openenv

./: .env.example  .gitignore  Dockerfile  README.md  api.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
.lh/: inference.py.json  pyproject.toml.json  uv.lock.json
.lh/environment/: uv.lock.json
.lh/server/: app.py.json
environment/: .gitignore  Dockerfile  README.md  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json
environment/data/: settings.json
environment/data/workspace/: notes.md  sample.py  welcome.ts
environment/public/: index.html  styles.css
environment/scripts/: copy-static.mjs
environment/src/app/: main.ts
environment/src/shared/: autocorrect.ts  contracts.ts  languages.ts
monaco_env/: __init__.py  env.py  graders.py  models.py
server/: app.py
