[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "monaco-ops-openenv"
version = "1.0.0"
description = "OpenEnv environment for Monaco code editor implementation"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "openai>=1.30.0",
]

[project.entry-points."openenv.envs"]
monaco-ops = "monaco_env:MonacoOpsEnv"

